--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: facebook_messager_main_view_lego
-description: "lego is all you need"
+description: "beautiful facebook messager main view lego"
 #publish_to: 'none'
-#repository: https://github.com/melodysdreamj/lego
+repository: https://github.com/flutter-lego/facebook_messager_main_view_lego
 
 version: 1.0.0
 
